--- a/Challenges/Day_18/style.css
+++ b/Challenges/Day_18/style.css
@@ -6,7 +6,7 @@
 
 body {
   height: 100vh;
-  background: linear-gradient(0, #120c56, #000000);
+  background: linear-gradient(0, #ec3713, #0cffc6);
 }
 
 .center {
